fix non modal dialog visibility

--- a/packages/components/src/components/Dialog/styles/dialog.module.scss
+++ b/packages/components/src/components/Dialog/styles/dialog.module.scss
@@ -94,8 +94,12 @@
 
 .underlay {
     position: fixed;
-    inset: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-color: rgb(from var(--box-neutral-mighty-color) r g b / 0);
+    pointer-events: auto;
 
     &[data-visible='true'] {
         background-color: rgb(from var(--box-neutral-mighty-color) r g b / 0.5);
